投稿用ハンドラー関数に追加してあるSwagger用コメントにエラー条件を追加
